EUW-1322: Støtte for ulike credential issuers + PID mdl push (#92)